--- a/personal.html
+++ b/personal.html
@@ -307,16 +307,8 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b>July 1st, 2021 1132</p>
-            <p><i>Romans 5:3-5<br>There’s more to come:
-                <br>We continue to shout our praise even when we’re hemmed in with troubles,
-                <br>because we know how troubles can develop passionate patience in us,
-                <br>and how that patience in turn forges the tempered steel of virtue,
-                <br>keeping us alert for whatever God will do next.
-                <br>In alert expectancy such as this, we’re never left feeling shortchanged.
-                <br>Quite the contrary—we can’t round up enough containers to hold
-                <br>everything God generously pours into our lives through the Holy Spirit!</i></p>
-                <br><br>Jesus changes everything.
+            <p style="font-size:110%;"><b>September 11th, 2021 0923</p>
+            <p><i>Your season is never wasted</i>
         </div>
         <div class="content" style="display:none;">     
         </div>
