--- a/design.html
+++ b/design.html
@@ -322,6 +322,8 @@
     <div class="content">
 	    <img draggable="false" ondragstart="return false;" src="25.png" onContextMenu="return false;"/>
 	    <img draggable="false" ondragstart="return false;" src="gradient25-01.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="LIGHTDARK.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="MONDAY.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
