--- a/design.html
+++ b/design.html
@@ -328,6 +328,15 @@
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<article class="post photo  index">
+    <div class="content">
+	    <img draggable="false" ondragstart="return false;" src="emily.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="anxious.png" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
 
 <!-- post meta -->
 </main>
